Enhance AutoPickup filters and GUI
Refactor and extend auto-pickup filtering and the features GUI:

- Refactor AutoPickup.Filter (name -> key) and add GUI metadata: guiIcon, guiLore, lineFormat, andMore, loreLimit, guiShow.
- Introduce noGenFilters to keep generated per-item filters out of the GUI and avoid lag; add GetNoGenFilters().
- Add config validation entries for the GUI reset-filter (icon, displayname, lore) in ConfigValidation and resource filtering.yml updates with GUI settings and per-filter GUI options.
- Implement GUI support in FeaturesGUI: paging/viewing state, autoPickupFilters() generation (including translation of entries), PDC tags for selection, item flags, and interaction handling for filter selection and navigation.
- Logging and API updates: switch to new logging methods and updated config/getter method names; various code cleanups (pattern matching for instanceof, boolean style, minor bug/comment fixes).
- Bump buildNumber in buildNumber.properties.

These changes add UI customization for filters, prevent GUI bloat from auto-generated filters, and improve maintainability and logging.