@@ -4,7 +4,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.bukkit.Bukkit;
 import org.bukkit.Location;
@@ -43,58 +42,79 @@ import valorless.havenbags.persistentdatacontainer.PDC;
 import valorless.havenbags.utils.TextFeatures;
 import valorless.valorlessutils.Server;
 import valorless.valorlessutils.Server.Version;
-import valorless.valorlessutils.ValorlessUtils.Log;
+import valorless.valorlessutils.logging.Log;
 import valorless.valorlessutils.config.Config;
 import valorless.valorlessutils.tags.TagType;
 import valorless.valorlessutils.tags.Tags;
 import valorless.valorlessutils.utils.Utils;
 
-@SuppressWarnings("deprecation")
+//@SuppressWarnings("deprecation")
 public class AutoPickup implements Listener {
-	
-	private static boolean enabled = true;
-	
+
+	private static boolean enabled = false;
+
 	public static class Filter {
-		public String name;
+		public String key;
 		public String displayname;
-		public List<String> entries = new ArrayList<String>();
+		public List<String> entries;
+		public String guiIcon;
+		public List<String> guiLore = List.of(
+				"&fItems:"
+		);
+		public String lineFormat = "&7 ⏵ %s";
+		public String andMore = "&7... and %s more";
+		public int loreLimit = 10;
+		public boolean guiShow = true;
+
 		
-		public Filter(String name, String displayname, List<String> entries) {
-			this.name = name;
+		public Filter(String key, String displayname, List<String> entries) {
+			this.key = key;
 			this.displayname = displayname;
 			this.entries = entries;
+			this.guiIcon = entries.isEmpty() ? "NAME_TAG" : entries.getFirst();
+		}
+
+		public Filter(String key, String displayname, List<String> entries, List<String> guiLore, String lineFormat) {
+			this.key = key;
+			this.displayname = displayname;
+			this.entries = entries;
+			this.guiIcon = entries.isEmpty() ? "NAME_TAG" : entries.getFirst();
+			this.guiLore = guiLore;
+			this.lineFormat = lineFormat;
 		}
 	}
 
 	public static Config filter;
 	
-	private static List<Filter> filters = new ArrayList<Filter>();
+	private static final List<Filter> filters = new ArrayList<>();
+	/** A list of filters without generated filters for specific items, used for the GUI, to prevent lag when opening and bloating the GUI. */
+	private static final List<Filter> noGenFilters = new ArrayList<>();
 		
 	public static void init() {
-		Log.Debug(Main.plugin, "[DI-16] Registering AutoPickup");
+		Log.debug(Main.plugin, "[DI-16] Registering AutoPickup");
 		Bukkit.getServer().getPluginManager().registerEvents(new AutoPickup(), Main.plugin);
 		
 
-		if(!Main.config.GetBool("auto-pickup.enabled")) return;
-		Integer ticks = 10;
+		if(!Main.config.getBool("auto-pickup.enabled")) return;
+		enabled = true;
+		int ticks = 10;
 		new BukkitRunnable() {
 		    @Override
 		    public void run() {
 		        for (Player player : Bukkit.getOnlinePlayers()) {
 		        	if (player.getInventory().firstEmpty() != -1) continue; // Inventory isn't full
 		        	for (Entity entity : player.getNearbyEntities(1, 1, 1)) {
-		                if (!(entity instanceof Item)) continue;
-		                Item dropped = (Item) entity;
-		                if (dropped.isDead() || !dropped.isValid()) continue;
+		                if (!(entity instanceof Item dropped)) continue;
+                        if (dropped.isDead() || !dropped.isValid()) continue;
 		                if (dropped.getOwner() != null && dropped.getOwner() != player.getUniqueId()) continue;
 		                if (dropped.getPickupDelay() > 0) continue;
 		                
-		        		if(HavenBags.InventoryContainsBag(player) == false) continue;
+		        		if(!HavenBags.InventoryContainsBag(player)) continue;
 		        		ItemStack item = dropped.getItemStack();
 		        		
-		        		Log.Debug(Main.plugin, "[DI-153] " + item.getType().toString());
+		        		Log.debug(Main.plugin, "[DI-153] " + item.getType().toString());
 		        		boolean cancel = PutItemInBag(item, player);
-		        		Log.Debug(Main.plugin, "[DI-154] " + "Cancelled: " + cancel);
+		        		Log.debug(Main.plugin, "[DI-154] " + "Cancelled: " + cancel);
 		        		if(cancel) {
 		        			PickupParticles(player, dropped.getLocation(), item);
 		        			dropped.remove();
@@ -106,25 +126,50 @@ public class AutoPickup implements Listener {
 	}
 	
 	public static void Initiate() {
-		if(!Main.config.GetBool("auto-pickup.enabled")) return;
+		if(!Main.config.getBool("auto-pickup.enabled")) return;
 		filters.clear();
-		Object[] f = filter.GetConfigurationSection("filters").getKeys(false).toArray();
-		Log.Debug(Main.plugin, "[DI-145] " + "Filters: " + f.length);
+		noGenFilters.clear();
+		Object[] f = filter.getConfigurationSection("filters").getKeys(false).toArray();
+		Log.debug(Main.plugin, "[DI-145] " + "Filters: " + f.length);
 		for(int i = 0; i < f.length; i++) {
-			String filterName = String.valueOf(f[i]);
-			filters.add(new Filter(filterName, filter.GetString(String.format("filters.%s.displayname", filterName)), filter.GetStringList(String.format("filters.%s.items", filterName))));
+			String key = String.valueOf(f[i]);
+			Filter entry = new Filter(
+					key,
+					filter.getString(String.format("filters.%s.displayname", key)),
+					filter.getStringList(String.format("filters.%s.items", key))
+			);
+			if(filter.hasKey(String.format("filters.%s.gui.show", key))){
+				entry.guiShow = filter.getBool(String.format("filters.%s.gui.show", key));
+			}
+			if(filter.hasKey(String.format("filters.%s.gui.icon", key))){
+				entry.guiIcon = filter.getString(String.format("filters.%s.gui.icon", key));
+			}
+			if(filter.hasKey(String.format("filters.%s.gui.lore", key))){
+				entry.guiLore = filter.getStringList(String.format("filters.%s.gui.lore", key));
+			}
+			if(filter.hasKey(String.format("filters.%s.gui.line-format", key))){
+				entry.lineFormat = filter.getString(String.format("filters.%s.gui.line-format", key));
+			}
+			if(filter.hasKey(String.format("filters.%s.gui.lore-limit", key))){
+				entry.loreLimit = filter.getInt(String.format("filters.%s.gui.lore-limit", key));
+			}
+			if(filter.hasKey(String.format("filters.%s.gui.and-more", key))){
+				entry.andMore = filter.getString(String.format("filters.%s.gui.and-more", key));
+			}
+			filters.add(entry);
+			noGenFilters.add(entry);
 
-			Log.Debug(Main.plugin, "[DI-146] " + "Filter: " + filterName);
+			Log.debug(Main.plugin, "[DI-146] " + "Filter: " + key);
 		}
 		
 		try {
-			if(filter.GetBool("allow-specific")) {
+			if(filter.getBool("allow-specific")) {
 				long startTime = System.currentTimeMillis();
-				Log.Info(Main.plugin, "Creating filters..");
+				Log.info(Main.plugin, "Creating filters..");
 				int i = 0;
 				List<Material> validMaterials = Arrays.stream(Material.values())
 						.filter(Material::isItem)
-						.collect(Collectors.toList());
+						.toList();
 				for(Material mat : validMaterials) {
 					List<String> thisMat = new ArrayList<>();
 					thisMat.add(mat.toString());
@@ -134,16 +179,16 @@ public class AutoPickup implements Listener {
 								Main.translator.Translate(mat.getTranslationKey()), thisMat));
 						i++;
 					}catch(Exception e) {
-						Log.Error(Main.plugin, String.format("Failed to translate '%s'.", mat.getTranslationKey()));
+						Log.error(Main.plugin, String.format("Failed to translate '%s'.", mat.getTranslationKey()));
 						//e.printStackTrace();
 					}
 				}
 				long endTime = System.currentTimeMillis();
 				long duration = endTime - startTime;
-				Log.Info(Main.plugin, String.format("Created %s filters. %sms", i, duration));
+				Log.info(Main.plugin, String.format("Created %s filters. %sms", i, duration));
 			}
 		}catch(Exception e) {
-			Log.Error(Main.plugin, "Something went wrong creating filters for specific items:");
+			Log.error(Main.plugin, "Something went wrong creating filters for specific items:");
 			e.printStackTrace();
 		}
 	}
@@ -151,30 +196,36 @@ public class AutoPickup implements Listener {
 	public static List<Filter> GetFilters(){
 		return filters;
 	}
+
+	/** Returns the filters without generated filters for specific items, used for the GUI,
+	 * to prevent lag when opening and bloating the GUI. */
+	public static List<Filter> GetNoGenFilters(){
+		return noGenFilters;
+	}
 	
 	public static List<String> GetFilterNames(Player player){
 		List<String> filternames = new ArrayList<String>();
 		for(Filter filter : filters) {
-			if(AutoPickup.filter.HasKey("filters." + filter.name + ".permission.node") && player != null) {
+			if(AutoPickup.filter.hasKey("filters." + filter.key + ".permission.node") && player != null) {
 				if(!player.hasPermission("havenbags.bypass")) {
-					if(!AutoPickup.filter.GetString("filters." + filter.name + ".permission.node").equalsIgnoreCase("none")) {
-						if(AutoPickup.filter.GetBool("filters." + filter.name + ".permission.apply")) {
-							if(!player.hasPermission(AutoPickup.filter.GetString("filters." + filter.name + ".permission.node"))) continue;
+					if(!AutoPickup.filter.getString("filters." + filter.key + ".permission.node").equalsIgnoreCase("none")) {
+						if(AutoPickup.filter.getBool("filters." + filter.key + ".permission.apply")) {
+							if(!player.hasPermission(AutoPickup.filter.getString("filters." + filter.key + ".permission.node"))) continue;
 						}else {
 							continue;
 						}
 					}
 				}
 			}
-			filternames.add(filter.name);
+			filternames.add(filter.key);
 		}
 		return filternames;
 	}
 	
 	@EventHandler
 	public void onBlockBreak(BlockBreakEvent event) {
-		if(Main.config.GetBool("auto-pickup.inventory.enabled")) {
-			if(Main.config.GetBool("auto-pickup.inventory.events.onBlockBreak")) {
+		if(Main.config.getBool("auto-pickup.inventory.enabled")) {
+			if(Main.config.getBool("auto-pickup.inventory.events.onBlockBreak")) {
 				Bukkit.getScheduler().scheduleSyncDelayedTask(Main.plugin, new Runnable() {
 				    public void run() {
 				    	FromInventory(event.getPlayer());
@@ -191,22 +242,22 @@ public class AutoPickup implements Listener {
 		if(event.getItem().getOwner() != null) {
 			if(event.getItem().getOwner() != player.getUniqueId()) return;
 		}
-		Log.Debug(Main.plugin, "[DI-149] " + "AutoPickupArrow");
-		List<String> blacklist = Main.config.GetStringList("blacklist");
+		Log.debug(Main.plugin, "[DI-149] " + "AutoPickupArrow");
+		List<String> blacklist = Main.config.getStringList("blacklist");
 		if(blacklist != null) {
-			if(blacklist.size() != 0) {
-				Log.Debug(Main.plugin, "[DI-150] " + "Player World: " + player.getWorld().getName());
+			if(!blacklist.isEmpty()) {
+				Log.debug(Main.plugin, "[DI-150] " + "Player World: " + player.getWorld().getName());
 				for(String world : blacklist) {
-					Log.Debug(Main.plugin, "[DI-151] " + "Blacklist: " + world);
+					Log.debug(Main.plugin, "[DI-151] " + "Blacklist: " + world);
 					if(player.getWorld().getName().equalsIgnoreCase(world)) return;
 				}
 			}
 		}
-		if(HavenBags.InventoryContainsBag(player) == false) return;
+		if(!HavenBags.InventoryContainsBag(player)) return;
 		if(HavenBags.IsBag(item)) return;
-		Log.Debug(Main.plugin, "[DI-153] " + item.getType().toString());
+		Log.debug(Main.plugin, "[DI-153] " + item.getType().toString());
 		boolean cancel = PutItemInBag(item, player);
-		Log.Debug(Main.plugin, "[DI-154] " + "Cancelled: " + cancel);
+		Log.debug(Main.plugin, "[DI-154] " + "Cancelled: " + cancel);
 		if(cancel) {
 			event.setCancelled(true);
 			int count = 10;
@@ -221,8 +272,8 @@ public class AutoPickup implements Listener {
 			event.getItem().remove();
 		}
 
-		if(Main.config.GetBool("auto-pickup.inventory.enabled")) {
-			if(Main.config.GetBool("auto-pickup.inventory.events.onItemPickup")) {
+		if(Main.config.getBool("auto-pickup.inventory.enabled")) {
+			if(Main.config.getBool("auto-pickup.inventory.events.onItemPickup")) {
 				Bukkit.getScheduler().scheduleSyncDelayedTask(Main.plugin, new Runnable() {
 				    public void run() {
 				    	FromInventory(player);
@@ -241,20 +292,20 @@ public class AutoPickup implements Listener {
 			if(event.getItem().getOwner() != player.getUniqueId()) return;
 		}
 		
-		if(HavenBags.InventoryContainsBag(player) == false) return;
+		if(!HavenBags.InventoryContainsBag(player)) return;
 		ItemStack item = event.getItem().getItemStack();
 		
-		Log.Debug(Main.plugin, "[DI-153] " + item.getType().toString());
+		Log.debug(Main.plugin, "[DI-153] " + item.getType().toString());
 		boolean cancel = PutItemInBag(item, player);
-		Log.Debug(Main.plugin, "[DI-154] " + "Cancelled: " + cancel);
+		Log.debug(Main.plugin, "[DI-154] " + "Cancelled: " + cancel);
 		if(cancel) {
 			event.setCancelled(true);
 			PickupParticles(player, event.getItem().getLocation(), item);
 			event.getItem().remove();
 		}
 
-		if(Main.config.GetBool("auto-pickup.inventory.enabled")) {
-			if(Main.config.GetBool("auto-pickup.inventory.events.onItemPickup")) {
+		if(Main.config.getBool("auto-pickup.inventory.enabled")) {
+			if(Main.config.getBool("auto-pickup.inventory.events.onItemPickup")) {
 				Bukkit.getScheduler().scheduleSyncDelayedTask(Main.plugin, new Runnable() {
 				    public void run() {
 				    	FromInventory(player);
@@ -266,44 +317,44 @@ public class AutoPickup implements Listener {
 	
 	/*
 	boolean PutItemInBag(ItemStack item, Player player){
-		Log.Debug(Main.plugin, "PutItemInBag?");
+		Log.debug(Main.plugin, "PutItemInBag?");
 		
 		if(ItemFilter(item) == null) {
-			Log.Debug(Main.plugin, "false");
+			Log.debug(Main.plugin, "false");
 			return false;
 		}
 	
 		List<Bag> bags = new ArrayList<Bag>();
-		Log.Debug(Main.plugin, "Checking for bags.");
+		Log.debug(Main.plugin, "Checking for bags.");
 		for(ItemStack i : player.getInventory().getContents()) {
-			//Log.Debug(Main.plugin, HavenBags.BagState(i).toString());
+			//Log.debug(Main.plugin, HavenBags.BagState(i).toString());
 			if(HavenBags.IsBag(i) && HavenBags.BagState(i) == HavenBags.BagState.Used) { 
 				if(PDC.Has(i, "bag-filter")) {
 					bags.add(new Bag(i, HavenBags.LoadBagContentFromServer(i, null)));
 				}
 			}
 		}
-		Log.Debug(Main.plugin, "bags:" + bags.size());
-		Log.Debug(Main.plugin, "Checking bag filters.");
+		Log.debug(Main.plugin, "bags:" + bags.size());
+		Log.debug(Main.plugin, "Checking bag filters.");
 		for(Bag bag : bags) {
-			Log.Debug(Main.plugin, "bag: " + PDC.GetString(bag.item, "bag-uuid"));
+			Log.debug(Main.plugin, "bag: " + PDC.GetString(bag.item, "bag-uuid"));
 			boolean c = false;
 			for(Filter f : filters) {
-				//Log.Debug(Main.plugin, "Filter: " + f.name);
-				//Log.Debug(Main.plugin, "Bag Filter: " + PDC.GetString(bag.item, "bag-filter"));
+				//Log.debug(Main.plugin, "Filter: " + f.name);
+				//Log.debug(Main.plugin, "Bag Filter: " + PDC.GetString(bag.item, "bag-filter"));
 				if(f.name.equalsIgnoreCase(PDC.GetString(bag.item, "bag-filter"))) {
 					c = true;
 					break;
 				}
 			}
-			Log.Debug(Main.plugin, "Filter " + c);
+			Log.debug(Main.plugin, "Filter " + c);
 			if(!c) {
-				Log.Debug(Main.plugin, "No filters, skipping.");
+				Log.debug(Main.plugin, "No filters, skipping.");
 				continue;
 			}
 			
 			if(!IsItemInFilter(PDC.GetString(bag.item, "bag-filter"), item)) {
-				Log.Debug(Main.plugin, "Item " + item.getType().toString() + " is not in the filter. Skipping.");
+				Log.debug(Main.plugin, "Item " + item.getType().toString() + " is not in the filter. Skipping.");
 				continue;
 			}
 			
@@ -319,7 +370,7 @@ public class AutoPickup implements Listener {
 			
 			
 			int maxContent = PDC.GetInt(bag.item, "bag-size");
-			Log.Debug(Main.plugin, "cont:" + bag.content.size());
+			Log.debug(Main.plugin, "cont:" + bag.content.size());
 			int contSize = 0;
 //			for(int i = 0; i < bag.content.size(); i++) {
 //				if(bag.content.get(i) == null) {
@@ -330,7 +381,7 @@ public class AutoPickup implements Listener {
 //					contSize++;
 //				}
 //			}
-			Log.Debug(Main.plugin, "Checking bag content.");
+			Log.debug(Main.plugin, "Checking bag content.");
 			for(ItemStack i : bag.content) {
 				try {
 					if(i.getType() != Material.AIR) {
@@ -343,19 +394,19 @@ public class AutoPickup implements Listener {
 			
 			if(HavenBags.CanCarry(item, bag.item) == false) return false;
 			
-			Log.Debug(Main.plugin, "contsize:" + contSize);
-			Log.Debug(Main.plugin, "size:" + maxContent);
+			Log.debug(Main.plugin, "contsize:" + contSize);
+			Log.debug(Main.plugin, "size:" + maxContent);
 			if(Contains(bag.content, item)) {
-				Log.Debug(Main.plugin, "Contains");
+				Log.debug(Main.plugin, "Contains");
 				for(ItemStack i : bag.content) {
 					if(i == null) continue;
 					if(i.getAmount() == i.getMaxStackSize()) continue;
 					if(StackHasSpace(i, item)) {
-						Log.Debug(Main.plugin, "stack Has Space");
+						Log.debug(Main.plugin, "stack Has Space");
 						if(item.getType().equals(i.getType())){
 							if(i.getAmount() != i.getMaxStackSize()) {
 								i.setAmount(i.getAmount() + item.getAmount());
-								Log.Debug(Main.plugin, bag.content.toString());
+								Log.debug(Main.plugin, bag.content.toString());
 								if(Main.weight.GetBool("enabled")) {
 						        	PDC.SetDouble(bag.item, "bag-weight", HavenBags.GetWeight(bag.content));
 									if(Main.weight.GetBool("weight-text-pickup")) {
@@ -375,11 +426,11 @@ public class AutoPickup implements Listener {
 							}
 						}
 					}else {
-						Log.Debug(Main.plugin, "stack overflow, adding new.");
+						Log.debug(Main.plugin, "stack overflow, adding new.");
 						for(int is = 0; is < bag.content.size(); is++) {
 							if(bag.content.get(is) == null) {
 								bag.content.set(is, item);
-								Log.Debug(Main.plugin, bag.content.toString());
+								Log.debug(Main.plugin, bag.content.toString());
 								if(Main.weight.GetBool("enabled")) {
 						        	PDC.SetDouble(bag.item, "bag-weight", HavenBags.GetWeight(bag.content));
 									if(Main.weight.GetBool("weight-text-pickup")) {
@@ -401,7 +452,7 @@ public class AutoPickup implements Listener {
 				}
 			}
 			if(contSize < maxContent) {
-				Log.Debug(Main.plugin, "Has Space");
+				Log.debug(Main.plugin, "Has Space");
 				for(int i = 0; i < bag.content.size(); i++) {
 					if(bag.content.get(i) == null) {
 						bag.content.set(i, item);
@@ -410,7 +461,7 @@ public class AutoPickup implements Listener {
 				}
 				
 				//bag.content.add(item);
-				Log.Debug(Main.plugin, bag.content.toString());
+				Log.debug(Main.plugin, bag.content.toString());
 				HavenBags.UpdateBagItem(bag.item, bag.content, player);
 				HavenBags.WriteBagToServer(bag.item, bag.content, player);
 				PickupSound(player);
@@ -425,23 +476,23 @@ public class AutoPickup implements Listener {
 				return true;
 			}
 		}
-		Log.Debug(Main.plugin, "Item was not put in bag.");
+		Log.debug(Main.plugin, "Item was not put in bag.");
 		return false;
 	}
 	*/
 	
 	static boolean PutItemInBag(ItemStack item, Player player){
-		if(BagData.isReady() == false) {
+		if(!BagData.isReady()) {
 			return false;
 		}
 		
-		Log.Debug(Main.plugin, "[DI-149] " + "AutoPickup");
-		List<String> blacklist = Main.config.GetStringList("blacklist");
+		Log.debug(Main.plugin, "[DI-149] " + "AutoPickup");
+		List<String> blacklist = Main.config.getStringList("blacklist");
 		if(blacklist != null) {
-			if(blacklist.size() != 0) {
-				Log.Debug(Main.plugin, "[DI-150] " + "Player World: " + player.getWorld().getName());
+			if(!blacklist.isEmpty()) {
+				Log.debug(Main.plugin, "[DI-150] " + "Player World: " + player.getWorld().getName());
 				for(String world : blacklist) {
-					Log.Debug(Main.plugin, "[DI-151] " + "Blacklist: " + world);
+					Log.debug(Main.plugin, "[DI-151] " + "Blacklist: " + world);
 					if(player.getWorld().getName().equalsIgnoreCase(world)) return false;
 				}
 			}
@@ -450,59 +501,59 @@ public class AutoPickup implements Listener {
 		// For some reason handling ExecutableItems items, would duplicate the item.
 		if (Bukkit.getPluginManager().getPlugin("ExecutableItems") != null) {
 			if(Tags.Has((JavaPlugin)Bukkit.getPluginManager().getPlugin("ExecutableItems"), item.getItemMeta().getPersistentDataContainer(), "ei-id", TagType.STRING)) {
-				Log.Debug(Main.plugin, "[DI-152] " + "Item is ExecutableItem, skipping.");
+				Log.debug(Main.plugin, "[DI-152] " + "Item is ExecutableItem, skipping.");
 				return false;
 			}
 		}
 		
 		if(HavenBags.IsBag(item)) return false;
 		
-		Log.Debug(Main.plugin, "[DI-154] " + "PutItemInBag?");
+		Log.debug(Main.plugin, "[DI-154] " + "PutItemInBag?");
 		
 		if(ItemFilter(item) == null) {
-			Log.Debug(Main.plugin, "[DI-155] " + "false");
+			Log.debug(Main.plugin, "[DI-155] " + "false");
 			//return false;
 		}
 		
         if(item.getType() == Material.AIR) return false;
 	
 		List<Bag> bags = new ArrayList<Bag>();
-		Log.Debug(Main.plugin, "[DI-156] " + "Checking for bags.");
+		Log.debug(Main.plugin, "[DI-156] " + "Checking for bags.");
 		for(ItemStack i : player.getInventory().getContents()) {
-			//Log.Debug(Main.plugin, HavenBags.BagState(i).toString());
+			//Log.debug(Main.plugin, HavenBags.BagState(i).toString());
 			if(HavenBags.IsBag(i) && BagState.getState(i) == BagState.USED) { 
 				if(PDC.Has(i, "filter")) {
 					bags.add(new Bag(i, HavenBags.LoadBagContentFromServer(i)));
 				}
 			}
 		}
-		Log.Debug(Main.plugin, "[DI-157] " + "bags:" + bags.size());
-		Log.Debug(Main.plugin, "[DI-158] " + "Checking bag filters.");
+		Log.debug(Main.plugin, "[DI-157] " + "bags:" + bags.size());
+		Log.debug(Main.plugin, "[DI-158] " + "Checking bag filters.");
 		//if(HavenBags.IsItemBlacklisted(item)) return false;
 		for(Bag bag : HavenBags.GetBagsDataInInventory(player)) {
 			Data data = BagData.GetBag(HavenBags.GetBagUUID(bag.item), null);
 			if(HavenBags.IsItemBlacklisted(item, data)) continue;
-			Log.Debug(Main.plugin, "[DI-159] " + "bag: " + PDC.GetString(bag.item, "uuid"));
+			Log.debug(Main.plugin, "[DI-159] " + "bag: " + PDC.GetString(bag.item, "uuid"));
 			if(BagData.IsBagOpen(PDC.GetString(bag.item, "uuid"), bag.item)) continue;
 			if(HavenBags.IsBagFull(bag.item)) continue;
 			boolean c = false;
 			for(Filter f : filters) {
-				//Log.Debug(Main.plugin, "Filter: " + f.name);
-				//Log.Debug(Main.plugin, "Bag Filter: " + PDC.GetString(bag.item, "bag-filter"));
-				if(f.name.equalsIgnoreCase(PDC.GetString(bag.item, "filter"))) {
-					if(AutoPickup.filter.HasKey("filters." + f.name + ".permission.node")) {
-						Log.Debug(Main.plugin, "[DI-160] " + "[AutoPickup] Permission");
-						if(!AutoPickup.filter.GetString("filters." + f.name + ".permission.node").equalsIgnoreCase("none")) {
-							Log.Debug(Main.plugin, "[DI-161] " + "[AutoPickup] Permission " + f.name);
-							if(AutoPickup.filter.GetBool("filters." + f.name + ".permission.use")) {
-								if(!player.hasPermission(AutoPickup.filter.GetString("filters." + f.name + ".permission.node"))) {
-									Log.Debug(Main.plugin, "[DI-162] " + "[AutoPickup] Permission Use true - Player false");
+				//Log.debug(Main.plugin, "Filter: " + f.name);
+				//Log.debug(Main.plugin, "Bag Filter: " + PDC.GetString(bag.item, "bag-filter"));
+				if(f.key.equalsIgnoreCase(PDC.GetString(bag.item, "filter"))) {
+					if(AutoPickup.filter.hasKey("filters." + f.key + ".permission.node")) {
+						Log.debug(Main.plugin, "[DI-160] " + "[AutoPickup] Permission");
+						if(!AutoPickup.filter.getString("filters." + f.key + ".permission.node").equalsIgnoreCase("none")) {
+							Log.debug(Main.plugin, "[DI-161] " + "[AutoPickup] Permission " + f.key);
+							if(AutoPickup.filter.getBool("filters." + f.key + ".permission.use")) {
+								if(!player.hasPermission(AutoPickup.filter.getString("filters." + f.key + ".permission.node"))) {
+									Log.debug(Main.plugin, "[DI-162] " + "[AutoPickup] Permission Use true - Player false");
 									c = false; break;
 								}else {
-									Log.Debug(Main.plugin, "[DI-163] " + "[AutoPickup] Permission Use true - Player true");
+									Log.debug(Main.plugin, "[DI-163] " + "[AutoPickup] Permission Use true - Player true");
 								}
 							}else {
-								Log.Debug(Main.plugin, "[DI-164] " + "[AutoPickup] Permission Use false");
+								Log.debug(Main.plugin, "[DI-164] " + "[AutoPickup] Permission Use false");
 								c = false; break;
 							}
 						}
@@ -512,30 +563,30 @@ public class AutoPickup implements Listener {
 				}
 			}
 			
-			Log.Debug(Main.plugin, "[DI-165] " + "Filter " + c);
+			Log.debug(Main.plugin, "[DI-165] " + "Filter " + c);
 			if(!c) {
-				Log.Debug(Main.plugin, "[DI-166] " + "No filters, skipping.");
+				Log.debug(Main.plugin, "[DI-166] " + "No filters, skipping.");
 				continue;
 			}
 			
 			if(!IsItemInFilter(PDC.GetString(bag.item, "filter"), item)) {
-				Log.Debug(Main.plugin, "[DI-167] " + "Item " + item.getType().toString() + " is not in the filter. Skipping.");
+				Log.debug(Main.plugin, "[DI-167] " + "Item " + item.getType().toString() + " is not in the filter. Skipping.");
 				continue;
 			}
 			
 
 	    	List<Placeholder> placeholders = new ArrayList<Placeholder>();
-	        if(PDC.Has(bag.item, "weight") && PDC.Has(bag.item, "weight-limit") && Main.weight.GetBool("enabled")) {
-	        	placeholders.add(new Placeholder("%bar%", TextFeatures.CreateBarWeight(HavenBags.GetWeight(bag.item), PDC.GetDouble(bag.item, "weight-limit"), Main.weight.GetInt("bar-length"))));
+	        if(PDC.Has(bag.item, "weight") && PDC.Has(bag.item, "weight-limit") && Main.weight.getBool("enabled")) {
+	        	placeholders.add(new Placeholder("%bar%", TextFeatures.CreateBarWeight(HavenBags.GetWeight(bag.item), PDC.GetDouble(bag.item, "weight-limit"), Main.weight.getInt("bar-length"))));
 	        	placeholders.add(new Placeholder("%weight%", TextFeatures.LimitDecimal(String.valueOf(HavenBags.GetWeight(bag.item)),2)));
 	        	placeholders.add(new Placeholder("%limit%", String.valueOf(PDC.GetDouble(bag.item, "weight-limit").intValue())));
 	        	placeholders.add(new Placeholder("%percent%", TextFeatures.LimitDecimal(String.valueOf(Utils.Percent(HavenBags.GetWeight(bag.item), PDC.GetDouble(bag.item, "weight-limit"))), 2) + "%"));
-	        	placeholders.add(new Placeholder("%bag-weight%", Lang.Parse(Main.weight.GetString("weight-lore"), placeholders, player)));
+	        	placeholders.add(new Placeholder("%bag-weight%", Lang.Parse(Main.weight.getString("weight-lore"), placeholders, player)));
 	        }
 			
 			
 			int maxContent = PDC.GetInteger(bag.item, "size");
-			Log.Debug(Main.plugin, "[DI-168] " + "cont:" + bag.content.size());
+			Log.debug(Main.plugin, "[DI-168] " + "cont:" + bag.content.size());
 			int contSize = 0;
 //			for(int i = 0; i < bag.content.size(); i++) {
 //				if(bag.content.get(i) == null) {
@@ -546,7 +597,7 @@ public class AutoPickup implements Listener {
 //					contSize++;
 //				}
 //			}
-			Log.Debug(Main.plugin, "[DI-169] " + "Checking bag content.");
+			Log.debug(Main.plugin, "[DI-169] " + "Checking bag content.");
 			for(ItemStack i : bag.content) {
 				try {
 					if(i.getType() != Material.AIR) {
@@ -557,20 +608,20 @@ public class AutoPickup implements Listener {
 				}
 			}
 			
-			if(HavenBags.CanCarry(item, bag.item) == false) return false;
+			if(!HavenBags.CanCarry(item, bag.item)) return false;
 			
-			Log.Debug(Main.plugin, "[DI-170] " + "maxContent:" + maxContent);
+			Log.debug(Main.plugin, "[DI-170] " + "maxContent:" + maxContent);
 			//if(contSize >= maxContent) return false;
-			Log.Debug(Main.plugin, "[DI-171] " + "contSize:" + contSize);
+			Log.debug(Main.plugin, "[DI-171] " + "contSize:" + contSize);
 			if(contSize == 0) {
-				if(bag.content.size() > 0) {
+				if(!bag.content.isEmpty()) {
 					bag.content.set(0, item);
 				}else bag.content.add(item);
-				if(Main.weight.GetBool("enabled")) {
+				if(Main.weight.getBool("enabled")) {
 		        	PDC.SetDouble(bag.item, "weight", HavenBags.GetWeight(bag.content));
-					if(Main.weight.GetBool("weight-text-pickup")) {
+					if(Main.weight.getBool("weight-text-pickup")) {
 						Message weightMessage = new Message(ChatMessageType.ACTION_BAR, 
-								Lang.Parse(Main.weight.GetString("weight-lore"), placeholders, player)
+								Lang.Parse(Main.weight.getString("weight-lore"), placeholders, player)
 							);
 						weightMessage.Send(player);
 					}
@@ -584,11 +635,11 @@ public class AutoPickup implements Listener {
 			
 			// Can't deal with empty bags.
 			if(HavenBags.AddItemToInventory(bag.content, PDC.GetInteger(bag.item, "size"), item, player)) {
-				if(Main.weight.GetBool("enabled")) {
+				if(Main.weight.getBool("enabled")) {
 		        	PDC.SetDouble(bag.item, "weight", HavenBags.GetWeight(bag.content));
-					if(Main.weight.GetBool("weight-text-pickup")) {
+					if(Main.weight.getBool("weight-text-pickup")) {
 						Message weightMessage = new Message(ChatMessageType.ACTION_BAR, 
-								Lang.Parse(Main.weight.GetString("weight-lore"), placeholders, player)
+								Lang.Parse(Main.weight.getString("weight-lore"), placeholders, player)
 							);
 						weightMessage.Send(player);
 					}
@@ -597,10 +648,10 @@ public class AutoPickup implements Listener {
 				//HavenBags.WriteBagToServer(bag.item, bag.content, player);
 				BagData.UpdateBag(bag.item, bag.content);
 				PickupSound(player);
-				Log.Debug(Main.plugin, "[DI-172] " + "Item put in bag.");
+				Log.debug(Main.plugin, "[DI-172] " + "Item put in bag.");
 				return true;
 			}else {
-				Log.Debug(Main.plugin, "[DI-173] " + "Item was not put in bag.");
+				Log.debug(Main.plugin, "[DI-173] " + "Item was not put in bag.");
 				return false;
 			}
 		}
@@ -608,28 +659,28 @@ public class AutoPickup implements Listener {
 		for(String ebag : EtherealBags.getPlayerBags(player.getUniqueId())) {
 			String key = EtherealBags.formatBagId(player.getUniqueId(), ebag);
 			if(HavenBags.IsItemBlacklisted(item)) continue;
-			Log.Debug(Main.plugin, "[DI-159] " + "ethereal bag: " + key);
+			Log.debug(Main.plugin, "[DI-159] " + "ethereal bag: " + key);
 			if(EtherealBags.isOpen(key)) continue;
 			if(EtherealBags.isBagFull(player.getUniqueId(), ebag)) continue;
 			boolean c = false;
 			String filter = EtherealBags.getBagAutoPickup(player.getUniqueId(), ebag);
 			for(Filter f : filters) {
-				//Log.Debug(Main.plugin, "Filter: " + f.name);
-				//Log.Debug(Main.plugin, "Bag Filter: " + PDC.GetString(bag.item, "bag-filter"));
-				if(f.name.equalsIgnoreCase(filter)) {
-					if(AutoPickup.filter.HasKey("filters." + f.name + ".permission.node")) {
-						Log.Debug(Main.plugin, "[DI-160] " + "[AutoPickup] Permission");
-						if(!AutoPickup.filter.GetString("filters." + f.name + ".permission.node").equalsIgnoreCase("none")) {
-							Log.Debug(Main.plugin, "[DI-161] " + "[AutoPickup] Permission " + f.name);
-							if(AutoPickup.filter.GetBool("filters." + f.name + ".permission.use")) {
-								if(!player.hasPermission(AutoPickup.filter.GetString("filters." + f.name + ".permission.node"))) {
-									Log.Debug(Main.plugin, "[DI-162] " + "[AutoPickup] Permission Use true - Player false");
+				//Log.debug(Main.plugin, "Filter: " + f.name);
+				//Log.debug(Main.plugin, "Bag Filter: " + PDC.GetString(bag.item, "bag-filter"));
+				if(f.key.equalsIgnoreCase(filter)) {
+					if(AutoPickup.filter.hasKey("filters." + f.key + ".permission.node")) {
+						Log.debug(Main.plugin, "[DI-160] " + "[AutoPickup] Permission");
+						if(!AutoPickup.filter.getString("filters." + f.key + ".permission.node").equalsIgnoreCase("none")) {
+							Log.debug(Main.plugin, "[DI-161] " + "[AutoPickup] Permission " + f.key);
+							if(AutoPickup.filter.getBool("filters." + f.key + ".permission.use")) {
+								if(!player.hasPermission(AutoPickup.filter.getString("filters." + f.key + ".permission.node"))) {
+									Log.debug(Main.plugin, "[DI-162] " + "[AutoPickup] Permission Use true - Player false");
 									c = false; break;
 								}else {
-									Log.Debug(Main.plugin, "[DI-163] " + "[AutoPickup] Permission Use true - Player true");
+									Log.debug(Main.plugin, "[DI-163] " + "[AutoPickup] Permission Use true - Player true");
 								}
 							}else {
-								Log.Debug(Main.plugin, "[DI-164] " + "[AutoPickup] Permission Use false");
+								Log.debug(Main.plugin, "[DI-164] " + "[AutoPickup] Permission Use false");
 								c = false; break;
 							}
 						}
@@ -639,19 +690,19 @@ public class AutoPickup implements Listener {
 				}
 			}
 			
-			Log.Debug(Main.plugin, "[DI-165] " + "Filter " + c);
+			Log.debug(Main.plugin, "[DI-165] " + "Filter " + c);
 			if(!c) {
-				Log.Debug(Main.plugin, "[DI-166] " + "No filters, skipping.");
+				Log.debug(Main.plugin, "[DI-166] " + "No filters, skipping.");
 				continue;
 			}
 			
 			if(!IsItemInFilter(filter, item)) {
-				Log.Debug(Main.plugin, "[DI-167] " + "Item " + item.getType().toString() + " is not in the filter. Skipping.");
+				Log.debug(Main.plugin, "[DI-167] " + "Item " + item.getType().toString() + " is not in the filter. Skipping.");
 				continue;
 			}
 			
 			List<ItemStack> content = EtherealBags.getBagContentsOrEmpty(player.getUniqueId(), ebag);
-			Log.Debug(Main.plugin, "[DI-169] " + "Checking bag content.");
+			Log.debug(Main.plugin, "[DI-169] " + "Checking bag content.");
 			int contSize = 0;
 			for(ItemStack i : content) {
 				try {
@@ -664,11 +715,11 @@ public class AutoPickup implements Listener {
 			}
 			
 			
-			Log.Debug(Main.plugin, "[DI-170] " + "maxContent:" + content.size());
+			Log.debug(Main.plugin, "[DI-170] " + "maxContent:" + content.size());
 			//if(contSize >= maxContent) return false;
-			Log.Debug(Main.plugin, "[DI-171] " + "contSize:" + contSize);
+			Log.debug(Main.plugin, "[DI-171] " + "contSize:" + contSize);
 			if(contSize == 0) {
-				if(content.size() > 0) {
+				if(!content.isEmpty()) {
 					content.set(0, item);
 				}else content.add(item);
 				EtherealBags.updateBagContents(player.getUniqueId(), ebag, content);
@@ -680,37 +731,38 @@ public class AutoPickup implements Listener {
 			HashMap<Boolean, List<ItemStack>> modified = HavenBags.AddItemToEtherealInventory(player, ebag, item);
 			if(modified.containsKey(true)) {
 				PickupSound(player);
-				Log.Debug(Main.plugin, "[DI-172] " + "Item put in bag.");
+				Log.debug(Main.plugin, "[DI-172] " + "Item put in bag.");
 				EtherealBags.updateBagContents(player.getUniqueId(), ebag, modified.get(true));
 				return true;
 			}else {
-				Log.Debug(Main.plugin, "[DI-173] " + "Item was not put in bag.");
+				Log.debug(Main.plugin, "[DI-173] " + "Item was not put in bag.");
 				return false;
 			}
 		}
 		
-		Log.Debug(Main.plugin, "[DI-174] " + "Item was not put in bag.");
+		Log.debug(Main.plugin, "[DI-174] " + "Item was not put in bag.");
 		return false;
 	}
 	
 	static String ItemFilter(ItemStack item) {
 		for(Filter f : filters) {
 			if(f.entries.contains(item.getType().toString())){
-				return f.name;
+				return f.key;
 			}
 		}
 		return null;
 	}
-	
+
+	@SuppressWarnings("deprecation")
 	public static boolean IsItemInFilter(String filter, ItemStack item) {
-		//Log.Debug(Main.plugin, "[DI-175] " + "IsItemInFilter?");
+		//Log.debug(Main.plugin, "[DI-175] " + "IsItemInFilter?");
 		int cmd = 0;
 		if(item.hasItemMeta() && item.getItemMeta().hasCustomModelData()) {
 			cmd = item.getItemMeta().getCustomModelData();
 		}
 		
 		for(Filter f : filters) {
-			if(f.name.equalsIgnoreCase(filter)) {
+			if(f.key.equalsIgnoreCase(filter)) {
 				if(checkPlugins(f.entries, item)) return true;
 				
 				if(cmd != 0) {
@@ -731,7 +783,7 @@ public class AutoPickup implements Listener {
 			}
 		}
 
-		//Log.Debug(Main.plugin, "[DI-177] " + "IsItemInFilter false");
+		//Log.debug(Main.plugin, "[DI-177] " + "IsItemInFilter false");
 		return false;
 	}
 	
@@ -744,7 +796,7 @@ public class AutoPickup implements Listener {
 			);
 		
 		for(PluginTags plugin : pluginTags) {
-			if(Main.plugins.GetBool("plugins." + plugin.name + ".enabled")) {
+			if(Main.plugins.getBool("plugins." + plugin.name + ".enabled")) {
 				if(Bukkit.getPluginManager().getPlugin(plugin.name) != null) {
 					JavaPlugin jplugin = (JavaPlugin)Bukkit.getPluginManager().getPlugin(plugin.name);
 					try {
@@ -757,13 +809,11 @@ public class AutoPickup implements Listener {
 		}
 		
 
-		if(Main.plugins.GetBool("plugins.ItemsAdder.enabled")) {
+		if(Main.plugins.getBool("plugins.ItemsAdder.enabled")) {
 			if(Bukkit.getPluginManager().getPlugin("ItemsAdder") != null) {
 				CustomStack citem = CustomStack.byItemStack(item);
 				if(citem != null) {
-					if(entries.contains("itemsadder:" + citem.getId())) {
-						return true;
-					}
+                    return entries.contains("itemsadder:" + citem.getId());
 				}
 			}
 		}
@@ -795,14 +845,14 @@ public class AutoPickup implements Listener {
 	}
 	
 	boolean StackHasSpace(ItemStack stack, ItemStack pickup) {
-		Log.Debug(Main.plugin, "[DI-178] " + "StackHasSpace?");
+		Log.debug(Main.plugin, "[DI-178] " + "StackHasSpace?");
 		int comb = stack.getAmount() + pickup.getAmount();
-		Log.Debug(Main.plugin, "[DI-179] " + "comb: " + comb);
+		Log.debug(Main.plugin, "[DI-179] " + "comb: " + comb);
 		if((stack.getAmount() + pickup.getAmount()) <= stack.getMaxStackSize()) {
-			Log.Debug(Main.plugin, "[DI-180] " + "StackHasSpace true");
+			Log.debug(Main.plugin, "[DI-180] " + "StackHasSpace true");
 			return true;
 		}else {
-			Log.Debug(Main.plugin, "[DI-181] " + "StackHasSpace false");
+			Log.debug(Main.plugin, "[DI-181] " + "StackHasSpace false");
 			return false;
 		}
 	}
@@ -816,14 +866,14 @@ public class AutoPickup implements Listener {
 	}
 	
 	static void PickupSound(Player player) {
-		Double pitch = 1.0;
+		double pitch = 1.0;
 		if(!Server.VersionEqualTo(Version.v1_17) && !Server.VersionEqualTo(Version.v1_17_1)) {
-			pitch = Utils.RandomRange(Main.config.GetDouble("auto-pickup.sound.pitch.min"), Main.config.GetDouble("auto-pickup.sound.pitch.max"));
+			pitch = Utils.RandomRange(Main.config.getDouble("auto-pickup.sound.pitch.min"), Main.config.getDouble("auto-pickup.sound.pitch.max"));
 		}
 		
 
-		Sound sound = new Sound(Main.config.GetString("auto-pickup.sound.key"), 
-    			Main.config.GetDouble("auto-pickup.sound.volume"), 
+		Sound sound = new Sound(Main.config.getString("auto-pickup.sound.key"),
+    			Main.config.getDouble("auto-pickup.sound.volume"),
     			pitch);	
 		sound.play(player);
 		
@@ -831,7 +881,7 @@ public class AutoPickup implements Listener {
 	
 	public static String GetFilterDisplayname(String filter) {
 		for(Filter f : filters) {
-			if(f.name.equalsIgnoreCase(filter)) {
+			if(f.key.equalsIgnoreCase(filter)) {
 				return f.displayname;
 			}
 		}
@@ -839,7 +889,7 @@ public class AutoPickup implements Listener {
 	}
 	
 	void FromInventory(Player player) {
-		Log.Debug(Main.plugin, "[DI-182] " + "Checking for items in inventory, to put into bag.");
+		Log.debug(Main.plugin, "[DI-182] " + "Checking for items in inventory, to put into bag.");
 		PlayerInventory inv = player.getInventory();
 		for(int i = 0; i < inv.getContents().length; i++) {
 			ItemStack item = inv.getItem(i);
@@ -863,7 +913,7 @@ public class AutoPickup implements Listener {
 						item.getType() == Material.SHEARS) {
 					if(i == 0 || // Hotbar slots
 							i == 1 ||
-							i == 2 ||
+							i == 2 || // What in the fuck happened here??
 							i == 3 ||
 							i == 4 ||
 							i == 5 ||
@@ -872,7 +922,7 @@ public class AutoPickup implements Listener {
 							i == 8) {
 						continue;
 					}
-						
+
 				}
 				continue;
 			}
